--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,15 +48,15 @@ dependencies {
 
     // ui
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation "androidx.activity:activity-ktx:1.3.0"
 
     // recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     // glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
@@ -72,7 +72,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // testing
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "junit:junit:$junitVersion"
@@ -98,4 +98,7 @@ dependencies {
     // paging
     //noinspection GradleDependency
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
+
+    // lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
 }
