--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -28,8 +28,8 @@ task clean(type: Delete) {
 
 ext {
     //dependencies version
-    appCompatVersion = '1.2.0'
-    coreVersion = '1.3.2'
+    appCompatVersion = '1.3.1'
+    coreVersion = '1.6.0'
     constraintLayoutVersion = '2.0.4'
     junitVersion = '4.13.2'
     junitExtversion = '1.1.2'
@@ -45,4 +45,5 @@ ext {
     archLifecycleVersion = '2.1.0'
     roomVersion = '2.3.0'
     roomRuntimeVersion = '2.3.0'
+    lottie_version = "3.4.1"
 }
